--- a/ingredients.ipynb
+++ b/ingredients.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXulWz25iniUIIhwUVCM5R",
+      "authorship_tag": "ABX9TyNw2jeSqy6IHZG/+YPwNCQ8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gatesz33/asian_recipe_classifier_ds4002/blob/main/ingredients.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/katrinag2004/asian_recipe_classifier_ds4002/blob/main/ingredients.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,6 +33,7 @@
         "import xml.etree.ElementTree as ET\n",
         "from bs4 import BeautifulSoup\n",
         "import json\n",
+        "import pandas as pd\n",
         "\n",
         "# --- Target country cuisines ---\n",
         "TARGET_CUISINES = {\n",
@@ -41,13 +42,13 @@
         "    \"indian\",\n",
         "    \"malaysian\",\n",
         "    \"japanese\",\n",
-        "    \"korean\",\n",
-        "    \"filipino\",\n",
-        "    \"vietnamese\"\n",
+        "    \"philipines\",\n",
+        "    \"vietnamese\",\n",
+        "    \"indonesian\"\n",
         "}\n",
         "\n",
-        "# --- Parse recipe JSON-LD (ingredients only) ---\n",
-        "def parse_ingredients_jsonld(url):\n",
+        "# --- Parse recipe JSON-LD (title + ingredients + instructions) ---\n",
+        "def parse_recipe_jsonld(url):\n",
         "    resp = requests.get(url)\n",
         "    soup = BeautifulSoup(resp.text, \"lxml\")\n",
         "\n",
@@ -58,21 +59,32 @@
         "            if isinstance(data, list):\n",
         "                for entry in data:\n",
         "                    if entry.get(\"@type\") == \"Recipe\":\n",
-        "                        return entry.get(\"recipeIngredient\", [])\n",
+        "                        return {\n",
+        "                            \"title\": entry.get(\"name\"),\n",
+        "                            \"url\": url,\n",
+        "                            \"ingredients\": entry.get(\"recipeIngredient\", []),\n",
+        "                            \"instructions\": entry.get(\"recipeInstructions\", [])\n",
+        "                        }\n",
         "            elif isinstance(data, dict) and data.get(\"@type\") == \"Recipe\":\n",
-        "                return data.get(\"recipeIngredient\", [])\n",
+        "                return {\n",
+        "                    \"title\": data.get(\"name\"),\n",
+        "                    \"url\": url,\n",
+        "                    \"ingredients\": data.get(\"recipeIngredient\", []),\n",
+        "                            \"instructions\": data.get(\"recipeInstructions\", [])\n",
+        "                }\n",
         "        except Exception:\n",
         "            continue\n",
-        "    return []\n",
+        "    return None\n",
         "\n",
         "# --- Get recipe links from category feed ---\n",
-        "def get_recipe_links_feed(feed_url, limit=20):\n",
+        "def get_recipe_links_feed(feed_url, limit=20): # Use the 'limit' parameter\n",
         "    resp = requests.get(feed_url)\n",
         "    if resp.status_code != 200:\n",
         "        return []\n",
         "    root = ET.fromstring(resp.content)\n",
         "\n",
         "    links = []\n",
+        "    # Use the 'limit' parameter in the slice\n",
         "    for item in root.findall(\"./channel/item\")[:limit]:\n",
         "        link_elem = item.find(\"link\")\n",
         "        if link_elem is not None and link_elem.text:\n",
@@ -98,37 +110,53 @@
         "# --- Scrape only target country categories ---\n",
         "def scrape_all(limit_per_cat=20):\n",
         "    categories = get_all_category_feeds()\n",
-        "    # filter to only country cuisines\n",
         "    categories = {name: feed for name, feed in categories.items() if name in TARGET_CUISINES}\n",
         "\n",
-        "    all_ingredients = {}\n",
+        "    all_recipes = {}\n",
         "    for name, feed_url in categories.items():\n",
         "        print(f\"Scraping {name}...\")\n",
-        "        links = get_recipe_links_feed(feed_url, limit=limit_per_cat)\n",
-        "        cat_ingredients = []\n",
+        "        links = get_recipe_links_feed(feed_url, limit=limit_per_cat) # Pass limit_per_cat\n",
+        "        recipes = []\n",
         "        for link in links:\n",
-        "            ingredients = parse_ingredients_jsonld(link)\n",
-        "            if ingredients:\n",
-        "                cat_ingredients.extend(ingredients)\n",
-        "        all_ingredients[name] = cat_ingredients\n",
-        "    return all_ingredients\n",
+        "            recipe = parse_recipe_jsonld(link)\n",
+        "            if recipe:\n",
+        "                recipes.append(recipe)\n",
+        "        all_recipes[name] = recipes\n",
+        "    return all_recipes\n",
         "\n",
         "# --- Run ---\n",
-        "all_ingredients = scrape_all(limit_per_cat=20)\n",
+        "all_recipes = scrape_all(limit_per_cat=30)\n",
         "\n",
-        "with open(\"asian_ingredients_by_country.json\", \"w\", encoding=\"utf-8\") as f:\n",
-        "    json.dump(all_ingredients, f, ensure_ascii=False, indent=2)\n",
+        "# Save JSON (by country → by recipe → ingredients)\n",
+        "with open(\"asian_recipes_by_country.json\", \"w\", encoding=\"utf-8\") as f:\n",
+        "    json.dump(all_recipes, f, ensure_ascii=False, indent=2)\n",
         "\n",
-        "print(\"✅ Done! Saved to asian_ingredients_by_country.json\")\n"
+        "# Save CSV (flattened: one row per ingredient per recipe)\n",
+        "rows = []\n",
+        "for country, recipes in all_recipes.items():\n",
+        "    for r in recipes:\n",
+        "        for ing in r[\"ingredients\"]:\n",
+        "            rows.append({\n",
+        "                \"country\": country,\n",
+        "                \"recipe_title\": r[\"title\"],\n",
+        "                \"recipe_url\": r[\"url\"],\n",
+        "                \"ingredient\": ing,\n",
+        "                \"instructions\": r[\"instructions\"]\n",
+        "            })\n",
+        "\n",
+        "df = pd.DataFrame(rows)\n",
+        "df.to_csv(\"asian_recipes_by_country.csv\", index=False)\n",
+        "\n",
+        "print(\"✅ Done! Saved to asian_recipes_by_country.json and asian_recipes_by_country.csv\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2-xl7dfTN0hj",
-        "outputId": "4eaccb0f-1fc3-4018-f9f1-f5bcf9d46b8e"
+        "id": "vk1XacB5RJDj",
+        "outputId": "12299f7d-de2d-4a20-8521-06fac4333dfb"
       },
-      "execution_count": 28,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,12 +164,13 @@
           "text": [
             "Scraping chinese...\n",
             "Scraping indian...\n",
+            "Scraping indonesian...\n",
             "Scraping japanese...\n",
-            "Scraping korean...\n",
             "Scraping malaysian...\n",
+            "Scraping philipines...\n",
             "Scraping thai...\n",
             "Scraping vietnamese...\n",
-            "✅ Done! Saved to asian_ingredients_by_country.json\n"
+            "✅ Done! Saved to asian_recipes_by_country.json and asian_recipes_by_country.csv\n"
           ]
         }
       ]
@@ -149,148 +178,118 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "os.listdir()\n"
+        "# --- Get ALL recipe links from category feed, with pagination ---\n",
+        "def get_recipe_links_feed(feed_url, max_pages=10, max_links=None):  # <-- default 10\n",
+        "    links = []\n",
+        "    page = 1\n",
+        "\n",
+        "    while page <= max_pages:\n",
+        "        url = f\"{feed_url}?paged={page}\"\n",
+        "        resp = requests.get(url)\n",
+        "        if resp.status_code != 200:\n",
+        "            break\n",
+        "\n",
+        "        root = ET.fromstring(resp.content)\n",
+        "        items = root.findall(\"./channel/item\")\n",
+        "        if not items:\n",
+        "            break  # no more pages\n",
+        "\n",
+        "        for item in items:\n",
+        "            link_elem = item.find(\"link\")\n",
+        "            if link_elem is not None and link_elem.text:\n",
+        "                links.append(link_elem.text.strip())\n",
+        "                if max_links and len(links) >= max_links:\n",
+        "                    return links\n",
+        "\n",
+        "        page += 1\n",
+        "\n",
+        "    return links\n",
+        "\n",
+        "\n",
+        "# --- Scrape only target categories, with pagination ---\n",
+        "def scrape_all(max_pages=10, limit_per_cat=None):  # <-- default 10\n",
+        "    categories = get_all_category_feeds()\n",
+        "    categories = {name: feed for name, feed in categories.items() if name in TARGET_CUISINES}\n",
+        "\n",
+        "    all_recipes = {}\n",
+        "    for name, feed_url in categories.items():\n",
+        "        print(f\"Scraping {name}...\")\n",
+        "        links = get_recipe_links_feed(feed_url, max_pages=max_pages, max_links=limit_per_cat)\n",
+        "        recipes = []\n",
+        "        for link in links:\n",
+        "            recipe = parse_recipe_jsonld(link)\n",
+        "            if recipe:\n",
+        "                recipes.append(recipe)\n",
+        "        all_recipes[name] = recipes\n",
+        "    return all_recipes\n",
+        "\n",
+        "\n",
+        "# --- Run full scrape (10 pages per category) ---\n",
+        "all_recipes = scrape_all(max_pages=10, limit_per_cat=None)\n",
+        "\n",
+        "import re\n",
+        "\n",
+        "# --- Ingredient cleaner (remove measurements, units, etc.) ---\n",
+        "def clean_ingredient(ing):\n",
+        "    ing = re.sub(r\"\\([^)]*\\)\", \"\", ing)  # remove ( ... )\n",
+        "    ing = re.sub(r\"\\d+[\\d\\s\\/\\.\\-]*\", \"\", ing)  # remove numbers/fractions\n",
+        "    ing = re.sub(\n",
+        "        r\"\\b(?:tsp|tbsp|cups?|cup|g|kg|ml|l|oz|pounds?|pound|teaspoons?|tablespoons?|grams?|kilograms?|liters?|milliliters?|ounce|ounces)\\b\",\n",
+        "        \"\",\n",
+        "        ing,\n",
+        "        flags=re.IGNORECASE,\n",
+        "    )\n",
+        "    ing = re.sub(r\"[^a-zA-Z\\s]\", \"\", ing)  # keep only letters/spaces\n",
+        "    return ing.strip()\n",
+        "\n",
+        "\n",
+        "# --- Group ingredients by recipe title and join them into a single string ---\n",
+        "def clean_ingredients(ingredients_list):\n",
+        "    cleaned = [clean_ingredient(ing) for ing in ingredients_list if ing.strip()]\n",
+        "    cleaned = sorted(set(filter(None, cleaned)))  # deduplicate + sort\n",
+        "    return \", \".join(cleaned)\n",
+        "\n",
+        "\n",
+        "# --- Build grouped dataset ---\n",
+        "processed_rows = []\n",
+        "for country, recipes in all_recipes.items():\n",
+        "    for r in recipes:\n",
+        "        processed_rows.append({\n",
+        "            \"country\": country,\n",
+        "            \"recipe_title\": r[\"title\"],\n",
+        "            \"ingredients\": clean_ingredients(r[\"ingredients\"]),\n",
+        "            \"instructions\": r[\"instructions\"]\n",
+        "        })\n",
+        "\n",
+        "processed_df = pd.DataFrame(processed_rows)\n",
+        "\n",
+        "# Save to CSV\n",
+        "processed_df.to_csv(\"asian_recipes_by_country_cleaned.csv\", index=False)\n",
+        "\n",
+        "print(\"✅ Done! Saved grouped + cleaned data to asian_recipes_by_country_cleaned.csv\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Z1-dFvWEOTuY",
-        "outputId": "7d858b3b-bb0f-43fe-988c-dc6cd87b0903"
+        "id": "jbz1brKtfrAe",
+        "outputId": "305d3af9-a974-470d-9475-6a517cc0f23b"
       },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['.config',\n",
-              " 'asian_recipes.csv',\n",
-              " 'asian_ingredients_by_country.json',\n",
-              " 'asian_ingredients.json',\n",
-              " 'asian_recipes.json',\n",
-              " 'sample_data']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import files\n",
-        "\n",
-        "files.download(\"asian_ingredients_by_country.json\")\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "id": "qu4GxBGEOdx5",
-        "outputId": "5abe66b4-8f8c-4540-86d8-ca6031f2ed45"
-      },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_9fed2459-d18b-4f0f-ba14-81b3e8da4d16\", \"asian_ingredients_by_country.json\", 29697)"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Save CSV (flattened)\n",
-        "rows = []\n",
-        "for country, ingredients in all_ingredients.items():\n",
-        "    for ing in ingredients:\n",
-        "        rows.append({\"country\": country, \"ingredient\": ing})\n",
-        "\n",
-        "df = pd.DataFrame(rows)\n",
-        "df.to_csv(\"asian_ingredients_by_country.csv\", index=False)\n",
-        "\n",
-        "print(\"✅ Done! Saved to asian_ingredients_by_country.json and asian_ingredients_by_country.csv\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RnKMdSVBOo7N",
-        "outputId": "8c538ad8-4794-4212-8dff-68326e338e95"
-      },
-      "execution_count": 31,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ Done! Saved to asian_ingredients_by_country.json and asian_ingredients_by_country.csv\n"
+            "Scraping chinese...\n",
+            "Scraping indian...\n",
+            "Scraping indonesian...\n",
+            "Scraping japanese...\n",
+            "Scraping malaysian...\n",
+            "Scraping philipines...\n",
+            "Scraping thai...\n",
+            "Scraping vietnamese...\n",
+            "✅ Done! Saved grouped + cleaned data to asian_recipes_by_country_cleaned.csv\n"
           ]
         }
       ]
@@ -299,19 +298,17 @@
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
-        "\n",
-        "\n",
-        "files.download(\"asian_ingredients_by_country.csv\")\n"
+        "files.download(\"asian_recipes_by_country_cleaned.csv\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
-        "id": "wmfh8AA4Os77",
-        "outputId": "cd79d20b-1cbc-4aa5-94e3-6e4b4af66d76"
+        "id": "UgXO-YxTiRAh",
+        "outputId": "2cc25fc0-b4dd-4581-eea0-45cce4fcf925"
       },
-      "execution_count": 32,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -372,7 +369,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_9e98ed68-0718-44ff-802e-71e9c5258c70\", \"asian_ingredients_by_country.csv\", 31027)"
+              "download(\"download_7b3d96d7-aefb-4d55-a05f-737c3a0a4d08\", \"asian_recipes_by_country_cleaned.csv\", 878000)"
             ]
           },
           "metadata": {}
