--- a/SCRIPTS/asian_recipe_modeling.ipynb
+++ b/SCRIPTS/asian_recipe_modeling.ipynb
@@ -1386,12 +1386,44 @@
     "from sklearn.svm import SVC\n",
     "\n",
     "clf = SVC(kernel='linear',class_weight='balanced',random_state=42)  # linear kernel works well for text\n",
+    "\n",
     "clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "573283d5-4f29-402b-b033-f79e6fa69f60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation accuracies: [0.75471698 0.69811321 0.67924528 0.55769231 0.67307692]\n",
+      "Mean Accuracy: 67.26%\n",
+      "Std Deviation: 6.43%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "# Run CV for accuracy\n",
+    "scores = cross_val_score(clf, X_vect, y, cv=cv, scoring='accuracy')\n",
+    "\n",
+    "print(\"Cross-validation accuracies:\", scores)\n",
+    "print(f\"Mean Accuracy: {scores.mean():.2%}\")\n",
+    "print(f\"Std Deviation: {scores.std():.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "06910661-c88a-464c-902b-fb73c5002add",
    "metadata": {},
    "outputs": [
@@ -1410,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "689b4461-716a-4869-a6de-5d75d4146837",
    "metadata": {},
    "outputs": [
@@ -1429,7 +1461,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "11bbe014-3ff1-4361-bfb4-5fd5ae025288",
    "metadata": {},
    "outputs": [
@@ -1480,12 +1512,12 @@
    "id": "f7ef5c71-6228-4e45-ac9c-1eeda8d7efb9",
    "metadata": {},
    "source": [
-    "### Linear Model ###"
+    "### Mutlinomial Logistic Regression Model ###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "a4e697bb-a9d6-4808-821d-1f7094f8853b",
    "metadata": {},
    "outputs": [],
@@ -1499,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "4ab6f705-9df6-43b0-9818-8a6886f4ebab",
    "metadata": {},
    "outputs": [],
@@ -1509,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "717bbd25-2916-4808-96a6-840d202d2d96",
    "metadata": {},
    "outputs": [],
@@ -1520,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "1109f97b-8550-49f6-abea-658d2a40ba67",
    "metadata": {},
    "outputs": [],
@@ -1532,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "98b0f6aa-b20f-4032-b6ad-85bd93ea5468",
    "metadata": {},
    "outputs": [
@@ -1952,7 +1984,7 @@
        "                   multi_class='multinomial', random_state=42)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1971,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "85f47014-9275-4553-8047-587aebd13611",
    "metadata": {},
    "outputs": [],
@@ -1981,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "b401f00d-9d75-42c6-b8b8-93c766a5539a",
    "metadata": {},
    "outputs": [
@@ -2018,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "673ae036-a2d2-4a05-856a-efb7c005b908",
    "metadata": {},
    "outputs": [
@@ -2047,6 +2079,51 @@
     "graph.plot(cmap='Blues')\n",
     "plt.title(\"Confusion Matrix\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "a4f9f0e9-43d5-44ee-ad69-73b8c9d3ab0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation accuracies: [0.77358491 0.71698113 0.66037736 0.59615385 0.67307692]\n",
+      "Mean Accuracy: 68.40%\n",
+      "Std Deviation: 5.92%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score\n",
+    "\n",
+    "\n",
+    "#Cross validation\n",
+    "\n",
+    "pipeline = Pipeline([\n",
+    "    ('tfidf', TfidfVectorizer(ngram_range=(1,2), min_df=2)),\n",
+    "    ('clf', LogisticRegression(\n",
+    "        multi_class='multinomial', \n",
+    "        solver='lbfgs', \n",
+    "        max_iter=500, \n",
+    "        class_weight='balanced', \n",
+    "        random_state=42\n",
+    "    ))\n",
+    "])\n",
+    "\n",
+    "\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "scores = cross_val_score(pipeline, X, y, cv=cv, scoring='accuracy')\n",
+    "\n",
+    "\n",
+    "print(\"Cross-validation accuracies:\", scores)\n",
+    "print(f\"Mean Accuracy: {scores.mean():.2%}\")\n",
+    "print(f\"Std Deviation: {scores.std():.2%}\")"
    ]
   }
  ],
